# cargo2nix-workspace-issue

./: Cargo.nix  Cargo.toml  README.md  flake.nix
mycrate/: Cargo.toml
mycrate/src/: main.rs
nix/: build.nix  cross.nix  native.nix  overlay.nix
