[workspace]
members = [
  "mycrate"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.20.1", features = ["full"] }

[patch.crates-io]

v8 = { git = "https://github.com/fracek/rusty_v8.git", rev = "8140a1a6d7a8296d68dfcf7efb6f30b9f1ae04a" }
libffi-sys = { git = "https://github.com/fracek/libffi-rs.git", rev = "f46945885ae65ee0ec9b6675764cdbe0fb1f2616" }
